creating base structure